--- a/scripts/main.html
+++ b/scripts/main.html
@@ -390,12 +390,7 @@ Figure 1.1: Photo of a male (left) and a female (right) chaffinch showcasing the
 </div>
 <div id="methods" class="section level1">
 <h1><span class="header-section-number">2</span> Methods</h1>
-<p>This is the methods</p>
-<pre><code>## # A tibble: 2 x 2
-##   sex        ss
-##   &lt;chr&gt;   &lt;dbl&gt;
-## 1 females  86.8
-## 2 males    87.9</code></pre>
+<p>We measured the mass of 20 chaffinches for both sexes and used R <span class="citation">(R Core Team 2020)</span> along with the tidyverse package <span class="citation">(Wickham et al. 2019)</span> to analyse the results to see if there is a significant difference between the mass of the sexes.</p>
 </div>
 <div id="results" class="section level1">
 <h1><span class="header-section-number">3</span> Results</h1>
@@ -416,6 +411,12 @@ Figure 1.1: Photo of a male (left) and a female (right) chaffinch showcasing the
 </div>
 <div id="ref-noauthor_undated-js">
 <p>“Chaffinch.” n.d.b. <a href="https://www.wildlifetrusts.org/wildlife-explorer/birds/finches-and-buntings/chaffinch">https://www.wildlifetrusts.org/wildlife-explorer/birds/finches-and-buntings/chaffinch</a>.</p>
+</div>
+<div id="ref-R">
+<p>R Core Team. 2020. <em>R: A Language and Environment for Statistical Computing</em>. Vienna, Austria: R Foundation for Statistical Computing. <a href="https://www.R-project.org/">https://www.R-project.org/</a>.</p>
+</div>
+<div id="ref-tidy">
+<p>Wickham, Hadley, Mara Averick, Jennifer Bryan, Winston Chang, Lucy D’Agostino McGowan, Romain François, Garrett Grolemund, et al. 2019. “Welcome to the tidyverse.” <em>Journal of Open Source Software</em> 4 (43): 1686. <a href="https://doi.org/10.21105/joss.01686">https://doi.org/10.21105/joss.01686</a>.</p>
 </div>
 </div>
 </div>
